objects/Long_Article__kav.object
<CustomObject>
    <articleTypeChannelDisplay>
        <articleTypeTemplates>
            <channel>App</channel>
            <template>Tab</template>
        </articleTypeTemplates>
        <articleTypeTemplates>
            <channel>Prm</channel>
            <template>Tab</template>
        </articleTypeTemplates>
        <articleTypeTemplates>
            <channel>Csp</channel>
            <template>Toc</template>
        </articleTypeTemplates>
        <articleTypeTemplates>
            <channel>Pkb</channel>
            <template>Toc</template>
        </articleTypeTemplates>
    </articleTypeChannelDisplay>
    <description>This is the single article type that was used when converting to lightning.  This has been re-labeled to knowledge.</description>
    <fields>
        <fullName>AED__c</fullName>
        <label>AED</label>
        <length>1000</length>
        <type>Html</type>
    </fields>
    <fields>
        <fullName>Attachments__c</fullName>
        <label>Attachments</label>
        <type>File</type>
    </fields>
    <fields>
        <fullName>Body_2__c</fullName>
        <label>Body 2</label>
        <length>131072</length>
        <type>Html</type>
    </fields>
    <fields>
        <fullName>Body__c</fullName>
        <label>Body</label>
        <length>131072</length>
        <type>Html</type>
    </fields>
    <fields>
        <fullName>Current_Marketing_Codes_and_Promos__c</fullName>
        <label>Current Marketing Codes and Promos</label>
        <length>256</length>
        <type>Html</type>
    </fields>
    <fields>
        <fullName>Details__c</fullName>
        <label>Details</label>
        <length>131072</length>
        <type>Html</type>
    </fields>
    <fields>
        <fullName>Document_Origin__c</fullName>
        <label>Document Origin</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Facebook</fullName>
                </value>
                <value>
                    <fullName>TSC</fullName>
                </value>
                <value>
                    <fullName>IConnect</fullName>
                </value>
                <value>
                    <fullName>Instructor Corner</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Email__c</fullName>
        <label>Email</label>
        <length>1000</length>
        <type>Html</type>
    </fields>
    <fields>
        <fullName>External_Author__c</fullName>
        <description>Field to enter a RC External Author</description>
        <label>External Author</label>
        <length>80</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>FAQ__c</fullName>
        <label>FAQ</label>
        <length>32768</length>
        <type>Html</type>
    </fields>
    <fields>
        <fullName>Fact_Sheet__c</fullName>
        <label>Fact Sheet</label>
        <type>File</type>
    </fields>
    <fields>
        <fullName>Features_and_Benefits__c</fullName>
        <label>Features and Benefits</label>
        <length>90000</length>
        <type>Html</type>
    </fields>
    <fields>
        <fullName>Generating_Prepaid_Labels_from_FedEx__c</fullName>
        <label>Generating Prepaid Labels from FedEx</label>
        <length>3000</length>
        <type>Html</type>
    </fields>
    <fields>
        <fullName>Group_Sales_Referral__c</fullName>
        <label>Group Sales Referral</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>Lifeline__c</fullName>
        <label>Lifeline</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>Native_Article__c</fullName>
        <label>Native Article</label>
        <length>500</length>
        <type>Html</type>
    </fields>
    <fields>
        <fullName>Other__c</fullName>
        <label>Other</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>Overview__c</fullName>
        <label>Overview</label>
        <length>101000</length>
        <type>Html</type>
    </fields>
    <fields>
        <fullName>Prerequisites__c</fullName>
        <label>Prerequisites</label>
        <length>30000</length>
        <type>Html</type>
    </fields>
    <fields>
        <fullName>Program_Title__c</fullName>
        <label>Program Title</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>Promo_Copy__c</fullName>
        <label>Promo Copy</label>
        <length>9000</length>
        <type>Html</type>
    </fields>
    <fields>
        <fullName>Promo_Details__c</fullName>
        <label>Promo Details</label>
        <length>28000</length>
        <type>Html</type>
    </fields>
    <fields>
        <fullName>Purpose__c</fullName>
        <label>Purpose</label>
        <length>20000</length>
        <type>Html</type>
    </fields>
    <fields>
        <fullName>Red_Cross_Store__c</fullName>
        <label>Red Cross Store</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Section_10__c</fullName>
        <label>Section 10</label>
        <length>32768</length>
        <type>Html</type>
    </fields>
    <fields>
        <fullName>Section_11__c</fullName>
        <label>Section 11</label>
        <length>32768</length>
        <type>Html</type>
    </fields>
    <fields>
        <fullName>Section_1__c</fullName>
        <label>Section 1</label>
        <length>91000</length>
        <type>Html</type>
    </fields>
    <fields>
        <fullName>Table_of_Contents__c</fullName>
        <label>Table of Contents</label>
        <length>32768</length>
        <type>Html</type>
    </fields>
    <label>Knowledge</label>
    <pluralLabel>Knowledge</pluralLabel>
    <recordTypes>
        <fullName>Default</fullName>
        <active>true</active>
        <label>0-Default (DO NOT USE)</label>
    </recordTypes>
    <recordTypes>
        <fullName>Document_General</fullName>
        <active>true</active>
        <label>09 - Document | General</label>
    </recordTypes>
    <recordTypes>
        <fullName>Draft</fullName>
        <active>true</active>
        <label>DRAFT (DO NOT USE)</label>
    </recordTypes>
    <recordTypes>
        <fullName>Email</fullName>
        <active>true</active>
        <label>11 - Email</label>
    </recordTypes>
    <recordTypes>
        <fullName>Fact_Sheet</fullName>
        <active>true</active>
        <label>06 - Fact Sheet</label>
    </recordTypes>
    <recordTypes>
        <fullName>Job_Aid_BGST_AP_LTP_Agreement_Cancellations_Changes</fullName>
        <active>true</active>
        <label>Job Aid | BGST | AP/LTP Agreement Cancellations/Changes</label>
    </recordTypes>
    <recordTypes>
        <fullName>Job_Aid_BGST_AP_LTP_Agreement_Processing</fullName>
        <active>true</active>
        <label>Job Aid | BGST | AP/LTP Agreement Processing</label>
    </recordTypes>
    <recordTypes>
        <fullName>Job_Aid_BGST_AP_LTP_Request_to_Delay_Price_Increase</fullName>
        <active>true</active>
        <label>Job Aid | BGST | AP/LTP Request to Delay Price Increase</label>
    </recordTypes>
    <recordTypes>
        <fullName>Job_Aid_BGST_Adding_Discounts_on_Opportunity</fullName>
        <active>true</active>
        <label>Job Aid | BGST | Adding Discounts on Opportunity</label>
    </recordTypes>
    <recordTypes>
        <fullName>Job_Aid_BGST_Convert_FS_AP_LTP_Leads</fullName>
        <active>true</active>
        <label>Job Aid | BGST | Convert FS/AP/LTP Leads</label>
    </recordTypes>
    <recordTypes>
        <fullName>Job_Aid_BGST_Convert_an_AED_Lead_to_an_Account_Contact_Opportunity</fullName>
        <active>true</active>
        <label>Job Aid | BGST | Convert an AED Lead to an Account/Contact/Opportunity</label>
    </recordTypes>
    <recordTypes>
        <fullName>Job_Aid_BGST_Create_AP_LTP_Agreements</fullName>
        <active>true</active>
        <label>Job Aid | BGST | Create AP/LTP Agreements</label>
    </recordTypes>
    <recordTypes>
        <fullName>Job_Aid_BGST_Create_A_Full_Service_Contract</fullName>
        <active>true</active>
        <label>Job Aid | BGST | Create a Full Service Contract</label>
    </recordTypes>
    <recordTypes>
        <fullName>Job_Aid_BGST_Create_a_Lead</fullName>
        <active>true</active>
        <label>Job Aid | BGST | Create a Lead</label>
    </recordTypes>
    <recordTypes>
        <fullName>Job_Aid_BGST_Create_a_Lead_AED_Sales</fullName>
        <active>true</active>
        <label>Job Aid | BGST | Create a Lead - AED Sales</label>
    </recordTypes>
    <recordTypes>
        <fullName>Job_Aid_BGST_EnPro_Program_Management_for_AEDs_Order_Form</fullName>
        <active>true</active>
        <label>Job Aid | BGST | EnPro Program Management for AEDs Order Form</label>
    </recordTypes>
    <recordTypes>
        <fullName>Job_Aid_BGST_Full_Service_Pre_Approval_Process_for_Non_Standard_Courses</fullName>
        <active>true</active>
        <label>Job Aid | BGST | Full Service Pre-Approval Process for Non-Standard Courses</label>
    </recordTypes>
    <recordTypes>
        <fullName>Job_Aid_BGST_Invoicing_Requests</fullName>
        <active>true</active>
        <label>Job Aid | BGST | Invoicing Requests</label>
    </recordTypes>
    <recordTypes>
        <fullName>Job_Aid_BGST_Managing_Discounts</fullName>
        <active>true</active>
        <label>Job Aid | BGST | Managing Discounts</label>
    </recordTypes>
    <recordTypes>
        <fullName>Job_Aid_BGST_Navigating_in_Lightning</fullName>
        <active>true</active>
        <label>Job Aid | BGST | Navigating in Lightning</label>
    </recordTypes>
    <recordTypes>
        <fullName>Job_Aid_BGST_Non_standard_Product_Blanket_Approvals_by_Territory</fullName>
        <active>true</active>
        <label>Job Aid | BGST | Non-standard Product Blanket Approvals by Territory</label>
    </recordTypes>
    <recordTypes>
        <fullName>Job_Aid_BGST_Phillips_AED_Order_Form</fullName>
        <active>true</active>
        <label>Job Aid | BGST | Phillips AED Order Form</label>
    </recordTypes>
    <recordTypes>
        <fullName>Job_Aid_BGST_Physio_Control_AED_Form</fullName>
        <active>true</active>
        <label>Job Aid | BGST | Physio Control AED Form</label>
    </recordTypes>
    <recordTypes>
        <fullName>Job_Aid_BGST_Qualify_a_Lead</fullName>
        <active>true</active>
        <label>Job Aid | BGST | Qualify a Lead</label>
    </recordTypes>
    <recordTypes>
        <fullName>Job_Aid_BGST_Qualify_an_AED_Lead</fullName>
        <active>true</active>
        <label>Job Aid | BGST | Qualify an AED Lead</label>
    </recordTypes>
    <recordTypes>
        <fullName>Job_Aid_BGST_RSG</fullName>
        <active>true</active>
        <label>Job Aid | BGST/RSG</label>
    </recordTypes>
    <recordTypes>
        <fullName>Job_Aid_BGST_Request_for_W_9_or_Vendor_Forms</fullName>
        <active>true</active>
        <label>Job Aid | BGST | Request for W-9 or Vendor Forms</label>
    </recordTypes>
    <recordTypes>
        <fullName>Job_Aid_BGST_Return_to_Sales_RTS_Follow_Up_Process</fullName>
        <active>true</active>
        <label>Job Aid | BGST | Return to Sales (RTS) Follow Up Process</label>
    </recordTypes>
    <recordTypes>
        <fullName>Job_Aid_BGST_Revisions_to_Full_Service_Agreements</fullName>
        <active>true</active>
        <label>Job Aid | BGST | Revisions to Full Service Agreements</label>
    </recordTypes>
    <recordTypes>
        <fullName>Job_Aid_BGST_Sales_Admin_Creating_and_Updating_ORGs_in_LMS</fullName>
        <active>true</active>
        <label>Job Aid | BGST Sales Admin | Creating and Updating ORGs in LMS</label>
    </recordTypes>
    <recordTypes>
        <fullName>Job_Aid_BGST_Sales_Admin_Docusign</fullName>
        <active>true</active>
        <label>Job Aid | BGST Sales Admin | Docusign</label>
    </recordTypes>
    <recordTypes>
        <fullName>Job_Aid_BGST_Sales_Admin_Managing_FS_Agreements</fullName>
        <active>true</active>
        <label>Job Aid | BGST Sales Admin | Managing FS Agreements</label>
    </recordTypes>
    <recordTypes>
        <fullName>Job_Aid_BGST_Sales_Admin_Revisions_to_Full_Service_Agreements</fullName>
        <active>true</active>
        <label>Job Aid | BGST Sales Admin | Revisions to Full Service Agreements</label>
    </recordTypes>
    <recordTypes>
        <fullName>Job_Aid_BGST_Sales_Call_Flow</fullName>
        <active>true</active>
        <label>Job Aid | BGST | Sales Call Flow</label>
    </recordTypes>
    <recordTypes>
        <fullName>Job_Aid_BGST_Searching_Existing_and_Creating_New_Contacts</fullName>
        <active>true</active>
        <label>Job Aid | BGST | Searching Existing and Creating New Contacts</label>
    </recordTypes>
    <recordTypes>
        <fullName>Job_Aid_BGST_Sending_a_Proposal</fullName>
        <active>true</active>
        <label>Job Aid | BGST | Sending a Proposal</label>
    </recordTypes>
    <recordTypes>
        <fullName>Job_Aid_BGST_Zoll_AED_Order_Forms</fullName>
        <active>true</active>
        <label>Job Aid | BGST | Zoll AED Order Forms</label>
    </recordTypes>
    <recordTypes>
        <fullName>Job_Aid_CTI_Salesforce_Lightning</fullName>
        <active>true</active>
        <label>Job Aid | CTI with Salesforce Lightning</label>
    </recordTypes>
    <recordTypes>
        <fullName>Job_Aid_Cancel_a_Learner</fullName>
        <active>true</active>
        <label>Job Aid | Cancel a Learner</label>
    </recordTypes>
    <recordTypes>
        <fullName>Job_Aid_Cancel_a_Products_Order</fullName>
        <active>true</active>
        <label>Job Aid | Cancel a Products Order</label>
    </recordTypes>
    <recordTypes>
        <fullName>Job_Aid_Community_Class_Cash_Check_Money_Order_Payments_for_Registrations</fullName>
        <active>true</active>
        <label>Job Aid | Community Class | Cash, Check, Money Order Payments for Registrations</label>
    </recordTypes>
    <recordTypes>
        <fullName>Job_Aid_Community_Offerings_Walk_Ins</fullName>
        <active>true</active>
        <label>Job Aid | Community Offerings | Walk Ins</label>
    </recordTypes>
    <recordTypes>
        <fullName>Job_Aid_Create_and_Edit_a_Contact_in_Salesforce_for_Non_Phone_Agents</fullName>
        <active>true</active>
        <label>Job Aid | Create and Edit a Contact in Salesforce for Non-Phone Agents</label>
    </recordTypes>
    <recordTypes>
        <fullName>Job_Aid_Handling_Non_Training_and_Certification_Calls_Updated</fullName>
        <active>true</active>
        <label>Job Aid | Handling Non-Training and Certification Calls</label>
    </recordTypes>
    <recordTypes>
        <fullName>Job_Aid_Long</fullName>
        <active>true</active>
        <label>02 - Job Aid | Long</label>
    </recordTypes>
    <recordTypes>
        <fullName>Job_Aid_Prepaid_Shipping_Labels</fullName>
        <active>true</active>
        <label>Job Aid | Prepaid Shipping Labels</label>
    </recordTypes>
    <recordTypes>
        <fullName>Job_Aid_Purchase_Orders</fullName>
        <active>true</active>
        <label>Job Aid | Purchase Orders</label>
    </recordTypes>
    <recordTypes>
        <fullName>Job_Aid_RSG_Follow_Up_Calls_1</fullName>
        <active>true</active>
        <label>Job Aid | RSG| Follow Up Calls</label>
    </recordTypes>
    <recordTypes>
        <fullName>Job_Aid_RSG_Handling_Customer_Credit_Card_Payment_Issues</fullName>
        <active>true</active>
        <label>Job Aid | RSG | Handling Customer Credit Card Payment Issues</label>
    </recordTypes>
    <recordTypes>
        <fullName>Job_Aid_RSG_Lightning_Contacts_and_Cases</fullName>
        <active>true</active>
        <label>Job Aid | RSG | Lightning Contacts and Cases</label>
    </recordTypes>
    <recordTypes>
        <fullName>Job_Aid_RSG_Order_Cancellations_Complaints_that_arent_returned</fullName>
        <active>true</active>
        <label>Job Aid | RSG | Order Cancellations/Complaints that aren&apos;t Returned</label>
    </recordTypes>
    <recordTypes>
        <fullName>Job_Aid_RSG_Orders_from_the_Original_Red_Cross_Store</fullName>
        <active>true</active>
        <label>Job Aid | RSG | Orders from the &quot;Original&quot; Red Cross Store</label>
    </recordTypes>
    <recordTypes>
        <fullName>Job_Aid_RSG_Request_to_use_Retail_Purchase_Order</fullName>
        <active>true</active>
        <label>Job Aid | RSG | Request to use Retail Purchase Order</label>
    </recordTypes>
    <recordTypes>
        <fullName>Job_Aid_RSG_Sales_Admin_FedEx_Alerts_and_Refund_Requests</fullName>
        <active>true</active>
        <label>Job Aid | RSG Sales Admin | FedEx Alerts and Refund Requests</label>
    </recordTypes>
    <recordTypes>
        <fullName>Job_Aid_RSG_Sales_Admin_Process_for_PO_Retail_Orders</fullName>
        <active>true</active>
        <label>Job Aid | RSG Sales Admin | Process for PO Retail Orders</label>
    </recordTypes>
    <recordTypes>
        <fullName>Job_Aid_RSG_Salesforce_Lightning_Navigation</fullName>
        <active>true</active>
        <label>Job Aid | RSG | Salesforce Lightning Navigation</label>
    </recordTypes>
    <recordTypes>
        <fullName>Job_Aid_RSG_iCA_Basic_Navigation_and_Zones</fullName>
        <active>true</active>
        <label>Job Aid | RSG | iCA Basic Navigation and Zones</label>
    </recordTypes>
    <recordTypes>
        <fullName>Job_Aid_RSG_iCA_Ordering</fullName>
        <active>true</active>
        <label>Job Aid | RSG | iCA Ordering</label>
    </recordTypes>
    <recordTypes>
        <fullName>Job_Aid_RSG_iCA_Returns</fullName>
        <active>true</active>
        <label>Job Aid | RSG | iCA Returns</label>
    </recordTypes>
    <recordTypes>
        <fullName>Job_Aid_RSG_iCA_WISMO_Where_is_my_Order</fullName>
        <active>true</active>
        <label>Job Aid | RSG | iCA WISMO (Where is my Order?)</label>
    </recordTypes>
    <recordTypes>
        <fullName>Job_Aid_RedCross_org_Business_Manager_Cancel_a_Learner</fullName>
        <active>true</active>
        <label>Job Aid | RedCross.org | Business Manager | Cancel a Learner</label>
    </recordTypes>
    <recordTypes>
        <fullName>Job_Aid_Sales_Requests_for_Group_Training_AED_Sales</fullName>
        <active>true</active>
        <label>Job Aid | Sales - Requests for Group Training/ AED Sales</label>
    </recordTypes>
    <recordTypes>
        <fullName>Job_Aid_Search_and_Register_for_a_Course_from_Salesforce_in_Learning_Center</fullName>
        <active>true</active>
        <label>Job Aid | Search and Register for a Course from Salesforce in Learning Center</label>
    </recordTypes>
    <recordTypes>
        <fullName>Job_Aid_Searching_in_LMS</fullName>
        <active>true</active>
        <label>Job Aid | Searching in LMS</label>
    </recordTypes>
    <recordTypes>
        <fullName>Job_Aid_Service_Lightning_Contacts_and_Cases</fullName>
        <active>true</active>
        <label>Job Aid | Service | Lightning Contacts and Cases</label>
    </recordTypes>
    <recordTypes>
        <fullName>Job_Aid_Short</fullName>
        <active>true</active>
        <label>01 - Job Aid | Short</label>
    </recordTypes>
    <recordTypes>
        <fullName>Job_Aid_iCA_Replacement_Orders</fullName>
        <active>true</active>
        <label>Job Aid | RSG | iCA Replacement Orders</label>
    </recordTypes>
    <recordTypes>
        <fullName>Linked_Document</fullName>
        <active>true</active>
        <label>12 - Linked Document</label>
    </recordTypes>
    <recordTypes>
        <fullName>Marketing_Promotion</fullName>
        <active>true</active>
        <label>07 - Marketing/Promotion</label>
    </recordTypes>
    <recordTypes>
        <fullName>Mobile_Application</fullName>
        <active>true</active>
        <label>08 - Mobile Application</label>
    </recordTypes>
    <recordTypes>
        <fullName>Program</fullName>
        <active>true</active>
        <label>05 - Program</label>
    </recordTypes>
    <recordTypes>
        <fullName>Program_Document</fullName>
        <active>true</active>
        <label>10 - Program Document</label>
    </recordTypes>
    <recordTypes>
        <fullName>Program_Safety_Training_for_Swim_Coaches</fullName>
        <active>true</active>
        <label>Program | Safety Training for Swim Coaches</label>
    </recordTypes>
    <recordTypes>
        <fullName>Tool_AP_LTP_Price_Increase_Talking_Points_FAQs</fullName>
        <active>true</active>
        <label>Tool | AP/LTP Price Increase Talking Points &amp; FAQs</label>
    </recordTypes>
    <recordTypes>
        <fullName>Tool_BGST_AED_State_Specific_Requirements</fullName>
        <active>true</active>
        <label>Tool | BGST | AED State-Specific Requirements</label>
    </recordTypes>
    <recordTypes>
        <fullName>Tool_BGST_Aquatics_Terminology_FAQs_and_Frequent_Links</fullName>
        <active>true</active>
        <label>Tool | BGST | Aquatics Terminology, FAQs, and Frequent Links</label>
    </recordTypes>
    <recordTypes>
        <fullName>Tool_BGST_Physio_Price_List</fullName>
        <active>true</active>
        <label>Tool | BGST | Physio Price List</label>
    </recordTypes>
    <recordTypes>
        <fullName>Tool_BGST_Split_Class_Policies</fullName>
        <active>true</active>
        <label>Tool | BGST | Split Class Policies</label>
    </recordTypes>
    <recordTypes>
        <fullName>Tool_Course_Codes</fullName>
        <active>true</active>
        <label>Tool | Course Codes</label>
    </recordTypes>
    <recordTypes>
        <fullName>Tool_Disaster_Alerts</fullName>
        <active>true</active>
        <label>Tool | ARC | Disaster Alerts</label>
    </recordTypes>
    <recordTypes>
        <fullName>Tool_Long</fullName>
        <active>true</active>
        <label>04 - Tool | Long</label>
    </recordTypes>
    <recordTypes>
        <fullName>Tool_Sales_Case_Closed_Reasons</fullName>
        <active>true</active>
        <label>Tool | Sales Case Closed Reasons</label>
    </recordTypes>
    <recordTypes>
        <fullName>Tool_Service_Case_Types</fullName>
        <active>true</active>
        <label>Tool | Service Case Types</label>
    </recordTypes>
    <recordTypes>
        <fullName>Tool_Short</fullName>
        <active>true</active>
        <label>03 - Tool | Short</label>
    </recordTypes>
</CustomObject>